--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
-  "name": "webserver-typescript",
+  "name": "task3",
   "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "main": "app.ts",
   "scripts": {
-    "start": "ts-node app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node app.ts"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
@@ -17,7 +13,8 @@
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "mongoose": "^5.0.3",
-    "winston": "^3.11.0"
+    "chalk": "4.1.2",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
